--- a/src/css/style.css
+++ b/src/css/style.css
@@ -93,6 +93,11 @@ body {
     border-radius: 5px;
 }
 
+.container .informacoes-preco .btn:hover {
+    background-color: hsl(68, 70%, 45%)
+    cursor: pointer;
+}
+
 .container .beneficios {
     background-color: hsl(179, 64%, 46%);
     color: #ffffff;
